--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
         "utf8": "disable"
     },
     "Lua.workspace.library": [
-        "c:\\Users\\Trevor\\.cursor\\extensions\\ketho.wow-api-0.20.8\\Annotations\\Core"
+        "~\\.vscode-insiders\\extensions\\ketho.wow-api-0.20.8\\Annotations\\Core"
     ],
     "Lua.type.weakUnionCheck": true,
     "Lua.diagnostics.globals": [
