--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
         "utf8": "disable"
     },
     "Lua.workspace.library": [
-        "~\\.vscode-insiders\\extensions\\ketho.wow-api-0.20.8\\Annotations\\Core"
+        "~\\.vscode-insiders\\extensions\\ketho.wow-api-0.21.0\\Annotations\\Core"
     ],
     "Lua.type.weakUnionCheck": true,
     "Lua.diagnostics.globals": [
@@ -28,6 +28,7 @@
         "UIDropDownMenu_AddButton",
         "UIDropDownMenu_CreateInfo",
         "CloseDropDownMenus",
-        "StaticPopup_Show"
+        "StaticPopup_Show",
+        "ITEM_QUALITY_COLORS"
     ]
 }
